--- a/source/_posts/移动周分享-第61期.md
+++ b/source/_posts/移动周分享-第61期.md
@@ -176,3 +176,42 @@ http://blog.hokolinks.com/how-to-implement-apple-universal-links-on-ios-9/
 
 **可能出现的bug**（巨坑，也可能是配置问题）
 http://stackoverflow.com/questions/32751225/ios9-universal-links-does-not-work
+
+
+## 结合实例介绍 nginx 配置 - 曾铭
+
+### 默认配置
+
+DNS, nginx, tomcat, application
+
+https://api-pre.51offer.com/mobile/user/login
+
+DNS: api-pre.51offer.com(host) -> IP(nginx)
+
+nginx: IP(nginx):80 -> IP(tomcat):8080
+
+tomcat: /mobile
+
+application: /user/login (controller, function)
+
+看 nginx 配置
+
+### 两个问题
+
+
+#### 调试 Universal Link
+https://api-pre.51offer.com/xyz.html
+https://api-pre.51offer.com/apple-site-app-config
+
+- 调整 tomcat content_path http://gitlab.51offer.inner/tool/tool-tms/commit/24b8c6f69ea0029b8cea8b7cbc46f3c2f355271d
+- 调整 application 静态文件路径
+- 改 header: nginx
+
+### 线上 fixbug
+
+http://www.51offer.com/aboutus/server.html?in_app=1
+
+api.51offer.com
+
+https://api.51offer.com/aboutus/server.html?in_app=1
+https://api.51offer.com/aboutus/protocol.html?in_app=1
